--- a/index.html
+++ b/index.html
@@ -7,11 +7,110 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="style.css">
 
-    <title>Hello, world!</title>
+    <title>Rock'N Roll Stroll by Peppers</title>
   </head>
+
   <body>
-    <h1>Hello, world!</h1>
+
+    <div class="vh-100 hero px-5 pt-3">
+
+
+        <div>
+          <div>
+            <img src="images/logo--rock-n-Stroll.png" alt="Rock 'n Stroll'"width="350px">
+            <img src="images/logo--peppers-black-sm.png" "size=small">
+            <div class="btn-group" role="group" aria-label="Basic example">
+              <div>
+              <a>shop</a>
+            </div>
+            <div>
+              <a>Features</a>
+            </div>
+            <div>
+              <a>Support</a>
+            </div>
+</div>
+            <div>
+            <h1> Audio Sunglasses</h1>
+          </div>
+          <div>
+            <p> Hit the slopes or Ride your bike without earbuds</p>
+          </div>
+            <div>
+              <div>
+            <button type="button" class="btn btn-primary btn-peppers ">Shop Now</button>
+          </div>
+        </div>
+              <git commit -m "fixed markup in the nav to match the mocks"
+              </div>
+              </div>
+              <div>
+              </div>
+            </div>
+            </div>
+          </div>
+
+
+
+
+<!-- this the end -->
+
+
+<div class="container px-5 pt-5">
+<div class="row">
+<div class="col-md-7">
+<h1> Hands free</h1>
+<p> play music,answer call & turn navigation streaming thorugh your shades</p>
+<button type="button" class="btn btn-primary btn-peppers ">Explore Features</button>
+  </div>
+  <div class="col-md-5">
+    <img src="images/cta-sunglasses.jpg"alt="red sunglasses" width="100%">
+  </div>
+  <div>
+  </div>
+</div>
+
+
+  <!-- Itstagram-->
+<div>
+</div>
+<div class="container-fluid p-0">
+  <div class="row">
+    <div class="col pr-01 ig-rel">
+      <img src="images/instagram-.jpg" alt="man wearing sunglasses"width="100%"/>
+      <div class="ig-abs">
+        <img src=" images/instagram-logo.png" alt="instagram-logo" width= "50px">
+      </div>
+    </div>
+    <div class="col pl-1">
+      <img src="images/instagram-2.jpg"alt="instagram-logo"width="100%"/>
+    </div>
+  </div>
+
+  </div>
+
+
+
+<!---over-->
+<div>
+  <div id="container-fluid p-6">
+    <div class="row">
+      <div class="col pr-09">
+<div container"px-5 Pt-5">
+        <h1> Find Your Style</h1>
+      </div>
+    </div>
+  </div>
+</div>
+<div>
+  <img src="images/product-black.jpg">
+  <img src="images/product-blue.jpg">
+  <img src="images/product-green.jpg">
+  <img src="imgaes/product-red.jpg">
+</div>
+
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
